--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,25 @@
   <head>
     <meta charset="utf-8" />
     <title>DPP Mining</title>
+    <style>
+      #mining-grid {
+        display: grid;
+        width: fit-content;
+        height: fit-content;
+      }
+
+      #mining-cell {
+        display: grid;
+      }
+
+      #mining-cell:hover {
+      }
+
+      .sprite {
+        image-rendering: pixelated;
+      }
+    </style>
   </head>
   <body>
-    <script src="./src/index.js"></script>
   </body>
 </html>
