perlin, more boards

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
         display: grid;
         width: fit-content;
         height: fit-content;
+        border: outset;
+        margin: 4px;
+        border-width: thick;
       }
 
       #mining-cell {
