scaling the board is now possible

--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,12 @@
 
       #mining-cell {
         display: grid;
+        align-content: center;
+        justify-content: center;
       }
 
       #mining-cell:hover {
+        filter: brightness(1.25) contrast(1.5);
       }
 
       .sprite {
