--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,10 @@
         filter: brightness(1.25) contrast(1.5);
       }
 
+      #mining-cell .sprite {
+        grid-area: 1 / 1;
+      }
+
       .sprite {
         image-rendering: pixelated;
       }
