added weighted randomness to items

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
         border: outset;
         margin: 4px;
         border-width: thick;
+        border-color: sandybrown;
       }
 
       #mining-cell {
