reset button and title

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,29 @@
     <meta charset="utf-8" />
     <title>DPP Mining</title>
     <style>
+      p, a, h1, h2, h3, h4, h5, h6, div, dl, dt, hr, li, ol, a, b, bdi, mark, s, span, button  {
+        font-family: 'Courier New', Courier, monospace;
+      }
+
+      button {
+        width: fit-content;
+      }
+
+      .horizontal-spread {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 1em;
+      }
+
+      #main-content {
+        display: flex;
+        flex-direction: column;
+        justify-self: center;
+        width: fit-content;
+        margin: auto;
+      }
+
       #mining-grid {
         display: grid;
         width: fit-content;
@@ -34,5 +57,6 @@
     </style>
   </head>
   <body>
+    <h1 style="text-align: center;">Diamond, Pearl, and Platinum underground mining game simulator</h1>
   </body>
 </html>
