--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
       }
 
       #hammer {
-        position: fixed;
+        position: absolute;
         z-index: 10;
         pointer-events: none;
       }
