really shitty hammer buttons

--- a/src/index.html
+++ b/src/index.html
@@ -37,10 +37,7 @@
         display: grid;
         width: fit-content;
         height: fit-content;
-        border: outset;
         margin: 4px;
-        border-width: thick;
-        border-color: sandybrown;
       }
 
       #mining-cell {
@@ -90,6 +87,10 @@
         position: absolute;
         z-index: 10;
         pointer-events: none;
+      }
+
+      #hammer-button {
+        position: absolute;
       }
     </style>
   </head>
