--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,7 @@
         display: grid;
         width: fit-content;
         height: fit-content;
+        position: absolute;
       }
 
       #mining-cell {
@@ -89,6 +90,24 @@
       }
 
       #hammer-button {
+        position: absolute;
+      }
+
+      #overlay {        
+        width: 100%;
+        height: 100%;
+        float: inline-end;
+        display: inline;
+        position: relative;
+        z-index: 2;
+        pointer-events: none;
+      }
+
+      #overlay * {
+        pointer-events: all;
+      }
+
+      .overlay-element {
         position: absolute;
       }
     </style>
