--- a/src/index.html
+++ b/src/index.html
@@ -110,6 +110,12 @@
       .overlay-element {
         position: absolute;
       }
+
+      #health-bar {
+        background: black;
+        position: absolute;
+        right: 0;
+      }
     </style>
   </head>
   <body>
