health bar... with some grossities

--- a/src/index.html
+++ b/src/index.html
@@ -112,10 +112,19 @@
       }
 
       #health-bar {
-        background: black;
         position: absolute;
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        width: fit-content;
         right: 0;
       }
+
+      #health-segment {
+        
+      }
+
+      
     </style>
   </head>
   <body>
