--- a/src/index.html
+++ b/src/index.html
@@ -120,10 +120,10 @@
         right: 0;
       }
 
-      #health-segment {
-        
+      .setting {
+        display: flex;
+        flex-direction: row;
       }
-
       
     </style>
   </head>
