--- a/src/index.html
+++ b/src/index.html
@@ -125,6 +125,18 @@
         flex-direction: row;
       }
       
+      #collection {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        width: 700px;
+      }
+
+      #collection-item {
+        padding: 0%;
+        margin: 0 1em 0 0;
+      }
+
     </style>
   </head>
   <body>
