--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>DPP Mining</title>
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.png">
     <style>
 
       :root {
