--- a/src/index.html
+++ b/src/index.html
@@ -242,6 +242,16 @@
     .setting-text {
       margin: 0;
     }
+
+    #message-overlay {
+      cursor: pointer;
+      position: absolute;
+      height: 100%;
+    }
+
+    #message-text {
+      font-size: 2em;
+    }
   </style>
 </head>
 
