--- a/src/index.html
+++ b/src/index.html
@@ -169,6 +169,12 @@
       pointer-events: none;
     }
 
+    #item-spark {
+      position: absolute;
+      pointer-events: none;
+      z-index: 9;
+    }
+
     #hammer-button {
       position: absolute;
       cursor: pointer;
