--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,12 @@
       --dark: 0;
       --background-color: #FFFFFF;
       --background-color-invert: #382859;
+      --diamond-color: #48C0F8;
+      --diamond-color-dark: #30A8E0;
+      --pearl-color: #F8B0B0;
+      --pearl-color-dark: #D89090;
+      --platinum-color: #D0C098;
+      --platinum-color-dark: #B8A880;
       --text-color: #52525A;
       --text-shadow: #A5A5AD;
       --text-dark: #101821;
@@ -90,6 +96,32 @@
     button {
       width: fit-content;
       height: fit-content;
+      background: var(--background-color);
+      border-style: outset;
+      border-color: var(--background-color);
+      cursor: pointer;
+    }
+
+    #version-button {
+      min-width: 10em;
+      min-height: 4em;
+      font-size: 1.5em;
+      border-width: thick;
+    }
+
+    .diamond {
+      background: var(--diamond-color);
+      border-color: var(--diamond-color-dark);
+    }
+
+    .pearl {
+      background: var(--pearl-color);
+      border-color: var(--pearl-color-dark);
+    }
+
+    .platinum {
+      background: var(--platinum-color);
+      border-color: var(--platinum-color-dark);
     }
 
     .horizontal-spread {
@@ -101,12 +133,27 @@
       margin-bottom: 3em;
     }
 
+    .centered-spread {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      padding: 1em;
+      margin-top: 1em;
+      margin-bottom: 3em;
+      align-items: center;
+    }
+
     #main-content {
       display: flex;
       flex-direction: column;
       justify-self: center;
       width: fit-content;
       margin: auto;
+    }
+
+    #board {
+      overflow: hidden;
+      position: relative;
     }
 
     #mining-grid {
@@ -180,6 +227,12 @@
     #hammer-button {
       position: absolute;
       cursor: pointer;
+    }
+
+    .simple-overlay {
+      width: 100%;
+      height: 100%;
+      position: absolute;
     }
 
     #overlay {
@@ -283,11 +336,44 @@
       text-shadow: 1px 1px 0px var(--text-highlight-shadow), 2px 2px 0px var(--text-highlight-shadow);
       color: var(--text-highlight);
     }
+
+    #version-selector {
+      height: 100%;
+      width: 100%;
+      background: black;
+      position: absolute;
+      background: linear-gradient(-45deg, var(--background-color-invert), var(--platinum-color-dark), var(--pearl-color-dark), var(--diamond-color-dark), var(--background-color-invert));
+      background-size: 400% 400%;
+      animation: gradient 15s ease infinite;
+      z-index: 11;
+    }
+
+    @keyframes gradient {
+      0% {
+        background-position: 0% 50%;
+      }
+
+      50% {
+        background-position: 100% 50%;
+      }
+
+      100% {
+        background-position: 0% 50%;
+      }
+    }
+
+    .animate-opacity {
+      opacity: 1;
+      transition: opacity 1s ease-in-out
+    }
+
+    .transparent {
+      opacity: 0;
+    }
   </style>
 </head>
 
 <body>
-  <h1 style="text-align: center;" class="title">Diamond, Pearl, and Platinum underground mining game simulator</h1>
 </body>
 
 </html>
