settings on top

--- a/src/index.html
+++ b/src/index.html
@@ -309,6 +309,7 @@
       padding-right: 1em;
       border: var(--background-color-invert);
       border-style: outset;
+      z-index: 100;
     }
 
     .setting {
