--- a/src/index.html
+++ b/src/index.html
@@ -262,6 +262,11 @@
       right: 0;
     }
 
+    #progress-bar {
+      display: flex;
+      justify-content: center;
+    }
+
     #collection {
       padding: 4em 20%;
     }
