--- a/src/index.html
+++ b/src/index.html
@@ -376,6 +376,31 @@
     .transparent {
       opacity: 0;
     }
+
+    #modifier-option {
+      padding: 1em;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    #modifier-cost {
+      display: flex;
+      padding-bottom: 16px;
+    }
+
+    #finalize-button {
+      margin: 2em 20%;
+      padding: 2em 8em;
+    }
+
+    #modifier-screen {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: flex-end;
+      align-content: space-between;
+      justify-content: space-around;
+    }
   </style>
 </head>
 
