--- a/src/index.html
+++ b/src/index.html
@@ -390,8 +390,10 @@
     }
 
     #finalize-button {
-      margin: 2em 20%;
-      padding: 2em 8em;
+      margin: 2em 25%;
+      width: 50%;
+      font-size: x-large;
+      height: 3em;
     }
 
     #modifier-screen {
