--- a/src/index.html
+++ b/src/index.html
@@ -389,11 +389,48 @@
       padding-bottom: 16px;
     }
 
+    #modifier-button {
+      animation: appear 0.4s ease-out 0.2s both;
+    }
+
+    #modifier-cost * {
+      animation: appear 0.4s ease-out both;
+    }
+
+
+    #modifier-cost :nth-child(1) {
+      animation-delay: 0.05s
+    }
+
+    #modifier-cost :nth-child(2) {
+      animation-delay: 0.1s
+    }
+
+    #modifier-cost :nth-child(3) {
+      animation-delay: 0.15s
+    }
+
+    #modifier-cost :nth-child(4) {
+      animation-delay: 0.2s
+    }
+
     #finalize-button {
       margin: 2em 25%;
       width: 50%;
       font-size: x-large;
       height: 3em;
+
+      animation: appear 0.4s ease-out both;
+    }
+
+    @keyframes appear {
+      from {
+        scale: 0;
+      }
+
+      to {
+        scale: 1;
+      }
     }
 
     #modifier-screen {
@@ -402,6 +439,20 @@
       align-items: flex-end;
       align-content: space-between;
       justify-content: space-around;
+      transition: scale 0.3s ease-in, opacity 0.3s ease-in;
+      animation: modifier-screen-appear 0.25s ease-out;
+    }
+
+    @keyframes modifier-screen-appear {
+      from {
+        opacity: 0;
+        scale: 0.5;
+      }
+
+      to {
+        opacity: 1;
+        scale: 1
+      }
     }
   </style>
 </head>
