--- a/src/index.html
+++ b/src/index.html
@@ -387,6 +387,7 @@
     #modifier-cost {
       display: flex;
       padding-bottom: 16px;
+      align-items: baseline;
     }
 
     #modifier-button {
@@ -415,7 +416,7 @@
     }
 
     #finalize-button {
-      margin: 2em 25%;
+      margin: 1em 25%;
       width: 50%;
       font-size: x-large;
       height: 3em;
