indicator for current modifier

--- a/src/index.html
+++ b/src/index.html
@@ -472,7 +472,7 @@
       margin: 1em;
       border-style: outset;
       border-color: var(--background-color-invert);
-      background: var(--background-color);
+      background: var(--background-color-invert);
     }
   </style>
 </head>
