flavour text style

--- a/src/index.html
+++ b/src/index.html
@@ -479,6 +479,11 @@
       }
     }
 
+    #flavour-text {
+      width: 100%;
+      text-align: center;
+    }
+
     #active-modifier {
       display: flex;
       flex-direction: row;
