memory of if you've ever owned an item, to display 0-amt items

--- a/src/index.html
+++ b/src/index.html
@@ -99,6 +99,21 @@
       color: var(--text-invert);
     }
 
+    .inverted-text-dark {
+      text-shadow: 1px 1px 0px var(--text-color), 2px 2px 0px var(--text-color);
+      color: var(--text-shadow);
+    }
+
+    .dark-text {
+      text-shadow: 1px 1px 0px var(--text-dark-shadow), 2px 2px 0px var(--text-dark-shadow);
+      color: var(--text-dark);
+    }
+
+    .gray-text {
+      text-shadow: 1px 1px 0px var(--text-shadow), 2px 2px 0px var(--text-shadow);
+      color: var(--text-color);
+    }
+
     .red-text {
       text-shadow: 1px 1px 0px var(--text-invert-shadow), 2px 2px 0px var(--text-invert-shadow);
       color: var(--pearl-color-dark);
