--- a/src/index.html
+++ b/src/index.html
@@ -511,6 +511,31 @@
       border-color: var(--background-color-invert);
       background: var(--background-color-invert);
     }
+
+    #badge-container {
+      position: fixed;
+      left: 0;
+    }
+
+    #badge {}
+
+    #badge.new-badge {
+      animation: badge-appear 0.5s ease-out both;
+    }
+
+    @keyframes badge-appear {
+      0% {
+        transform: scale(0) rotate(-360deg);
+      }
+
+      70% {
+        transform: scale(1.1) rotate(10deg);
+      }
+
+      100% {
+        transform: scale(1) rotate(0deg);
+      }
+    }
   </style>
 </head>
 
