wip badge three

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <title>DPP Mining</title>
   <link rel="icon" type="image/x-icon" href="./assets/favicon.png">
+  <script src="../script/global.js"></script>
   <style>
     @font-face {
       font-family: DPP;
